# Tcroneb-Gemini

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  types.d.ts  wrangler.json  wrangler.toml
app/: globals.css  layout.tsx  page.tsx
components/: AppSidebar.tsx  AssistantForm.tsx  AssistantMarket.tsx  AssistantRecommend.tsx  AttachmentArea.tsx  AudioPlayer.tsx  BubblesLoading.tsx  Button.tsx  EditableArea.tsx  ErrorMessageItem.tsx  FileList.tsx  FileUploader.tsx  I18nProvider.tsx  IconButton.tsx  MessageItem.tsx  PluginList.tsx  PluginMarket.tsx  PluginStore.tsx  ResponsiveDialog.tsx  SearchBar.tsx  Setting.tsx  StoreProvider.tsx  SystemInstruction.tsx
constant/: model.ts  plugins.ts  urls.ts
docs/: How-to-deploy-the-Cloudflare-Worker-api-proxy.md  How-to-deploy-the-Cloudflare-Worker-api-proxy.zh-CN.md  How-to-deploy-to-Cloudflare-Page.md  How-to-deploy-to-Cloudflare-Page.zh-CN.md  Use-Cloudflare-AI-Gateway.md  Use-Cloudflare-AI-Gateway.zh-CN.md
hooks/: use-mobile.tsx
locales/: ar-SA.json  de-DE.json  en.json  es-ES.json  fr-FR.json  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  zh-TW.json  zh.json
plugins/: arxiv.ts  index.ts  reader.ts  search.ts  time.ts  unsplash.ts  weather.ts
public/: manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
store/: assistant.ts  attachment.ts  chat.ts  conversation.ts  model.ts  plugin.ts  setting.ts
utils/: chat.ts  (+12 more)
(+41 files in other folders)
